--- a/roles/grafana/templates/nginx.conf.j2
+++ b/roles/grafana/templates/nginx.conf.j2
@@ -1,58 +1,57 @@
-{% if grafana.nginx_enable_ssl %}
+{% if grafana_nginx_enable_ssl %}
 server {
-    listen {{ grafana.nginx_listen }};
-    server_name {{ grafana.nginx_server_name }};
+    listen {{ grafana_nginx_listen }};
+    server_name {{ grafana_nginx_server_name }};
 
-    return 301 https://{{ grafana.nginx_server_name }}$request_uri;
+    return 301 https://{{ grafana_nginx_server_name }}$request_uri;
 }
 {% endif %}
 
 server {
-    {% if grafana.nginx_enable_ssl %}
-    listen {{ grafana.nginx_listen }}:443 ssl;
+
+    {% if grafana_nginx_enable_ssl %}
+      listen {{ grafana_nginx_listen }}:443 ssl;
     {% else %}
-    listen {{ grafana.nginx_listen }};
+      listen {{ grafana_nginx_listen }};
     {% endif %}
 
-    server_name {{ grafana.nginx_server_name }};
+    server_name {{ grafana_nginx_server_name }};
 
-    {% if grafana.nginx_enable_ssl %}
-    ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
-    ssl_certificate {{ grafana.nginx_ssl_cert_path }};
-    ssl_certificate_key {{ grafana.nginx_ssl_key_path }};
-    ssl_ciphers ALL:!aNULL:!ADH:!eNULL:!LOW:!EXP:RC4+RSA:+HIGH:+MEDIUM;
-    ssl_session_cache shared:SSL:10m;
+    {% if grafana_nginx_enable_ssl %}
+      ssl on;
+      ssl_certificate {{ grafana_nginx_ssl_path }}/{{ grafana_nginx_ssl_cert }};
+      ssl_certificate_key {{ grafana_nginx_ssl_path }}/{{ grafana_nginx_ssl_key }};
     {% endif %}
 
     proxy_read_timeout 120s; # slow queries happen
 
-    {% if grafana.nginx_access_log %}
-    access_log {{ grafana.nginx_access_log }};
+    {% if grafana_nginx_access_log %}
+      access_log {{ grafana_nginx_access_log }};
     {% endif %}
 
-    {% if grafana.nginx_error_log %}
-    error_log {{ grafana.nginx_error_log }};
+    {% if grafana_nginx_error_log %}
+      error_log {{ grafana_nginx_error_log }};
     {% endif %}
 
-    {% if grafana.nginx_htpasswd %}
-    auth_basic "Beep boop, password please!";
-    auth_basic_user_file /var/www/grafana/grafana.htpasswd;
+    {% if grafana_nginx_htpasswd %}
+      auth_basic "Password please!";
+      auth_basic_user_file /var/www/grafana/grafana.htpasswd;
     {% endif %}
 
     expires -1;
 
     location / {
-        root {{ grafana.root_path }}/dist;
+        root {{ grafana_root_path }}/dist;
     }
 
-    location /es/{{ grafana.index }}/ {
-        rewrite ^/es/({{ grafana.index }}/.*)$ /$1 break;
-        proxy_pass {{ grafana.elasticsearch_url }};
+    location /es/{{ grafana_index }}/ {
+        rewrite ^/es/({{ grafana_index }}/.*)$ /$1 break;
+        proxy_pass {{ grafana_elasticsearch_url }};
     }
 
     location /graphite/ {
         rewrite ^/graphite/(.*)$ /$1 break;
-        proxy_pass {{ grafana.graphite_url }};
+        proxy_pass {{ grafana_graphite_url }};
     }
 
 }
